--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,10 @@ body#page-course-view-remuiformat.editing .remui-format-card.single-section-form
   }
 }
 
+body#page-course-view-remuiformat .remui-format-card {
+  margin-top: 20px;
+}
+
 @media (max-width: 1200px) {
   body#page-course-view-remuiformat .remui-format-card.all-section-format .single-card-container {
     min-width: 50% !important;
@@ -152,6 +156,9 @@ body#page-course-view-remuiformat .remui-format-card.all-section-format .section
 body#page-course-view-remuiformat .remui-format-card.all-section-format .section .single-card {
   visibility: hidden;
   min-height: 340px;
+  margin-bottom: 1.75rem;
+  padding-bottom: 50px;
+  width: 100%;
 }
 
 body#page-course-view-remuiformat .remui-format-card.all-section-format .section .single-card.dark .left.side,
@@ -202,9 +209,9 @@ body#page-course-view-remuiformat .remui-format-card.all-section-format .section
 
 body#page-course-view-remuiformat .remui-format-card.all-section-format .section .card-bottom {
   position: absolute;
-  bottom: 15px;
-  left: 15px;
-  right: 15px;
+  bottom: 0.5rem;
+  left: 1rem;
+  right: 1rem;
 }
 
 body#page-course-view-remuiformat .remui-format-card.all-section-format .section .section-activities-summary {
